--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
