--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
@@ -21,9 +22,14 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
+    "fs": "0.0.1-security",
+    "gridfs-stream": "^1.1.1",
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.18",
+    "method-override": "^3.0.0",
+    "mongoose": "^4.13.20",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.1.0",
     "nodemailer": "^6.4.8",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
