Added tests for onboarding routes

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGODB_URI="mongodb+srv://thepc:thepc123@kessel-run.qupdz.mongodb.net/myFirstDa
 JWT_SECRET="THISISSECRET"
 SENDER_EMAIL=abhinavgorantla0613@gmail.com
 SENDER_EMAIL_PASS=kjvebhnpgijovmpt
+CONTENT_TYPE_POST="application/x-www-form-urlencoded"
