--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/* --timeout 10000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -24,10 +26,11 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.4.0",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.9.19",
+    "mongoose": "^5.12.9",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.8",
+    "nodemailer": "^6.6.0",
     "path": "^0.12.7",
     "sharp": "^0.26.3",
     "validator": "^13.1.1"
