FIX: Reset password routes

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SESSION_SECRET="sanjitk7"
 MONGODB_URL="mongodb://Abhinav:Abhinav@test1-shard-00-00-ynhuu.gcp.mongodb.net:27017,test1-shard-00-01-ynhuu.gcp.mongodb.net:27017,test1-shard-00-02-ynhuu.gcp.mongodb.net:27017/test?ssl=true&replicaSet=test1-shard-0&authSource=admin&retryWrites=true&w=majority"
 JWT_SECRET="THISISSECRET"
-SENDER_EMAIL=abhinavgorantla0613@gmail.com
-SENDER_EMAIL_PASS=kjvebhnpgijovmpt
+SENDER_EMAIL="abhinavgorantla0613@gmail.com"
+SENDER_EMAIL_PASS="aexrwnbehojeitin"
 CONTENT_TYPE_POST="application/x-www-form-urlencoded"
